fix disable zoom on mobile

--- a/client/layouts/single_layouts/single_layouts.less
+++ b/client/layouts/single_layouts/single_layouts.less
@@ -1,11 +1,7 @@
 // ***** MODAL
 
 /* Modal Content/Box */
-.modal-content, .modal-window {
-    background-color: #fefefe;
-    border: 1px solid #888;
-    width: 100%; /* Could be more or less, depending on screen size */
-}
+
 
 /* The Close Button */
 .close, .removeItem {
@@ -26,4 +22,9 @@
 
 .right{
   margin-top:30px;
+}
+
+.modal{
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .19),
+  0 6px 6px rgba(0, 0, 0, .23); // shadow depth 3
 }
